dev-stopover check on open